--- a/apps/helm-guestbook.yaml
+++ b/apps/helm-guestbook.yaml
@@ -22,6 +22,9 @@ spec:
           valuesObject:
             replicaCount: 5
             resources:
+              requests:
+                cpu: 1m
+                memory: 1Mi
               limits:
                 cpu: 1000m
                 memory: 16Gi
